fixed drop down overflow problem

--- a/style.css
+++ b/style.css
@@ -92,41 +92,39 @@ header,main{
 
 /*for small screens*/
 @media all and (max-width: 720px){
-
-    .desktop-indice{
-        display: none;
-    }
-    .mobile-indice{
-        display:block;
+    main{
+        padding: 15px;
     }
     .nav-desktop-con{
         display: none;
     }
     .header-top-section{
-        display: grid;
+        display: block;
     }
     .logo-con{
-        grid-column-start: 1;
-        grid-column-end: 6;
+        width: 20%;
         display: inline-block;
     }
     .nav-mobile-con{
         display: inline-block;
-        grid-column-start: 6;
-        grid-column-end: 10;
+        width: 30%;
+        margin-left: auto;
     }
     .drop-down-container{
         position: absolute;
         display: inline-block;
-        width: 100%;
-        margin-right: 2vw;
+        top: 0px;
+        right: 10px;
     }
     .drop-down-container:hover .drop-down-content{
         display: block;
     }
     .drop-down-btn{
-        width: 70%;
-        margin-left: 20%;
+        position: absolute;
+        right: 0px;
+
+       width: 50px;
+       height: 50px;
     }
     .drop-down-btn img{
         border:solid 1px rgba(0, 0, 0, 0.87);
@@ -141,7 +139,9 @@ header,main{
         background-color: white;
         box-shadow: black 1px 1px 10px;
         border-radius: 5px;
-        right: 20px;
+        position: relative;
+        right: 0px;
+        top: 60px;
     }
     .drop-down-content li{
         padding: 16px;
@@ -152,8 +152,12 @@ header,main{
     .text-description{
         width: 100%;
     }
-
-
+    .video-item-con{
+        max-width: 90vw;
+    }
+    .video-item-con img{
+        width: 100%;
+    }
 }
 /*for big screens*/
 @media all and (min-width: 720px){
